# PT_TASK2

./: Army.cpp  Army.h  ArmyEconomic.cpp  ArmyEconomic.h  BasicTerminal.cpp  BasicTerminal.h  BasicUnitTypes.cpp  BasicUnitTypes.h  CMakeLists.txt  Definitions.h  England.cpp  England.h  France.cpp  France.h  README.md  Squad.cpp  Squad.h  Unit.cpp  Unit.h  UnitFactory.cpp  UnitFactory.h  main.cpp  unique_pointer.h
