cmake_minimum_required(VERSION 3.9)
project(task2)

set(CMAKE_CXX_STANDARD 17)

add_executable(task2 main.cpp BasicTerminal.h BasicTerminal.cpp Unit.cpp Unit.h BasicUnitTypes.cpp BasicUnitTypes.h England.cpp England.h UnitFactory.cpp UnitFactory.h Definitions.h France.cpp France.h Squad.cpp Squad.h unique_pointer.h ArmyEconomic.cpp ArmyEconomic.h Army.cpp Army.h)